<resources>
    <string name="app_name">Unit Convertor</string>
    <string name="header_title">Unit Convertor</string>
    <string name="header_text">High conversions, high profits.</string>
    <string name="subheader_title1">General</string>
    <string name="lenght_title">Length</string>
    <string name="angle_title">Angle</string>
    <string name="time_title">Time</string>
    <string name="currency_title">Currency</string>
    <string name="labels_subheader_title">Physics</string>
    <string name="wm_title">Mass and weight</string>
    <string name="speed_title">Speed</string>
    <string name="convert_title">Convert</string>
    <string name="history_title">History</string>
    <string name="empty"> </string>
    <string name="c_code">🇮🇳 INR</string>
    <string name="c_name">Indian rupues</string>
    <string name="create_units">Create units</string>
    <string name="currency_title_1">Currency</string>
</resources>